<resources>
    <string name="app_name">梅糖桌面</string>
    <string name="info_for_oldmanmode">老人模式（不稳定），开启后会在口袋阅等手机Eink设备上有较好的体验，会增大、加粗字体显示，屏蔽不必要的APP桌面图标（主要提升学生\老年用户的体验），开启后会提示设置PIN码，关闭时需要输入PIN码验证身份</string>
    <string name="info_for_offlinemode">离线模式（不稳定），开启后将关闭部分无用联网功能</string>
    <string name="info_for_hindbottom">隐藏桌面中的底栏。隐藏之后可以通过桌面图标或长按时钟“小时”部分来进入桌面设置，此功能不建议和“桌面壁纸”中内设预置的壁纸使用，也不建议和“显示当前设置的壁纸”一起使用，因为会无法切换壁纸界面和APP界面</string>
    <string name="need_reboot">部分功能设置后需要重启桌面（或重启设备）</string>
    <string name="title_back">&lt; | 返回</string>
    <string name="quanxian_intent">网络权限，需要用在“天气”和“检查更新”中，桌面出现BUG时会有返回报错信息的功能，桌面内拥有离线模式，可关闭部分联网功能（后续将更新完整的离线模式）</string>
    <string name="quanxian_webname">访问网络连接管理器需要，主要可查询当前连接的网络（用于检查当前是否连接WIFI）</string>
    <string name="quanxian_wifiname">访问WIFI连接管理器需要，主要可查询当前连接的WIFI（用于检查当前是否连接WIFI）</string>
    <string name="quanxian_wifichanger">申请更改WIFI的权限（弃用状态）</string>
    <string name="quanxian_cunchu">本地存取权限，用于下载更新和设置图标</string>
    <string name="quanxian_chongqi">申请重启APP权限（点击“重载”时，不是退出APP而是重新启动APP）</string>
    <string name="quanxian_systemstart">开机广播权限，用于“开机自启”（暂时弃用功能）</string>
    <string name="quanxian_shezhibizhi">设置读取壁纸权限</string>
    <string name="quanxian_tanchuduihuakuang">全局弹出式对话框权限（本来用于悬浮球功能，但是现在处于暂时弃用状态）</string>
    <string name="quanxian_sdcardreader">SD卡读取权限（Android一些版本本地存储权限和SD卡读取权限是分开的，万一有的设备有SD卡就很尴尬了，所以需要添加权限进行适配，同样是下载更新功能和设置图标功能需要）</string>
    <string name="quanxian_installerq">申请安装apk的权限（没适配好，所以也是暂时弃用功能，如何安装更新在桌面内已经给出了一个弹窗提示，很方便QWQ）</string>
    <string name="quanxian_imei">获取设备IMEI，获取设备唯一标识符</string>
    <string name="setting_toptext">顶部文案</string>
    <string name="setting_desktoplist">桌面列表</string>
    <string name="setting_desktopimage">桌面壁纸</string>
    <string name="steeing_textsize">文本大小</string>
    <string name="setting_hindapp">隐藏应用管理</string>
    <string name="setting_about">关于“梅糖桌面”</string>
    <string name="setting_uninstalllacunher">卸载“梅糖桌面”</string>
    <string name="setting_restartlauncher">重载“梅糖桌面”</string>
    <string name="title_setting">设置</string>
    <string name="app_desktopsetting">桌面设置</string>
    <string name="app_desktopupdate">检查更新</string>
    <string name="app_desktopreforces">刷新屏幕</string>
    <string name="app_desktopweather">天气</string>
    <string name="dialog_con">确定</string>
    <string name="dialog_cls">取消</string>
    <string name="dialog_dimiss">关闭</string>
    <string name="dialog_auto">自动</string>
    <string name="list_number">手动输入任何数字</string>
    <string name="list_seekbar">请滑动来确定数量：</string>
    <string name="icon_setting_tirps">注意：您需要在电纸书的根目录（sdcard）创建一个名为“ntlauncher”的文件夹，在此文件夹内放置图标文件（PNG格式）。然后在下面的输入框内输入文件名称（请加上后缀名）</string>
    <string name="enter_name">请输入要更改的昵称</string>
    <string name="quck_setname">一键命名</string>
    <string name="enter_name_r1">女朋友送的</string>
    <string name="enter_name_r2">男朋友送的</string>
    <string name="enter_name_r3">朋友送的</string>
    <string name="enter_name_r4">自己买的</string>
    <string name="enter_shoudongshuru">手动输入：直接显示输入的内容</string>
    <string name="enter_autoseet">一键命名：选择的内容+“电纸书”</string>
    <string name="dialog_newuser_title">正在向您申请激活设备</string>
    <string name="dialog_newuser_message">只需激活一次，仅做用户设备型号统计，需要联网。如果不需要请直接点击取消即可。本对话框只会显示一次。</string>
    <string name="dialog_textsize_tips">请滑动设置文本大小</string>
    <string name="uninstall">卸载</string>
    <string name="hinddin">隐藏</string>
    <string name="update_icon">更换图标</string>
    <string name="hind_tips">隐藏后的应用可以在桌面设置-应用管理中恢复</string>
    <string name="weather_city">请输入您居住的城市：</string>
    <string name="weather_olay_somewhere">仅限中国大陆地区</string>
    <string name="weather_citylist">例：枣庄市 或：峄城区</string>
    <string name="weather_show_or_hind">设置“天气”模块是否显示在桌面上</string>
    <string name="show">显示</string>
    <string name="hind">隐藏</string>
    <string name="click_to_next">下一步</string>
    <string name="name_ebook">电纸书</string>
    <string name="string_about">关于</string>
    <string name="string_weather">天气</string>
    <string name="string_wallpaper">壁纸设置</string>
    <string name="string_version">相关信息</string>
    <string name="setting_xuanfuqiu">悬浮窗相关</string>
    <string name="setting_yijian">意见反馈</string>
    <string name="setting_exit_launcher">退出“奶糖桌面”</string>
    <string name="setting_checkbox_hindbar">在主界面隐藏底栏</string>
    <string name="setting_offlinemode">离线模式（不稳定）</string>
    <string name="setting_oldmanmode">老年模式（不稳定）</string>
    <string name="welecome_string_welecome">欢迎使用“梅糖桌面”</string>
    <string name="welecome_string_quanxian">权限需求：</string>
    <string name="welecome_string_needquanxian">“梅糖桌面”需要以下权限：</string>
    <string name="welecome_string_internet">---INTERNET---</string>
    <string name="welecome_string_access_network_state">---ACCESS_NETWORK_STATE---</string>
    <string name="welecome_string_change_wifi_state">---CHANGE_WIFI_STATE---</string>
    <string name="welecome_string_access_wifi_state">---ACCESS_WIFI_STATE---</string>
    <string name="welecome_string_read_external_storage">---READ_EXTERNAL_STORAGE---</string>
    <string name="welecome_string_restart_packages">---RESTART_PACKAGES---</string>
    <string name="welecome_string_receive_boot_completed">---RECEIVE_BOOT_COMPLETED---</string>
    <string name="welecome_string_set_wallpaper">---SET_WALLPAPER---</string>
    <string name="welecome_string_system_alert_window">---SYSTEM_ALERT_WINDOW---</string>
    <string name="welecome_string_system_overlay_window">---SYSTEM_OVERLAY_WINDOW---</string>
    <string name="welecome_string_write_external_storage">---WRITE_EXTERNAL_STORAGE---</string>
    <string name="welecome_string_request_install_packages">---REQUEST_INSTALL_PACKAGES---</string>
    <string name="welecome_string_read_phone_state">---READ_PHONE_STATE---</string>
    <string name="welecome_huanying1">欢迎使用！</string>
    <string name="welecome_huanying2">Welcome！</string>
    <string name="welecome_huanying3">ご利用ください！</string>
    <string name="welecome_huanying4">오신 것을 환영합니다！</string>
    <string name="welecome_huanying5">Bienvenue à utiliser！</string>
    <string name="welecome_huanying_choseyuyan1">请选择你的语言</string>
    <string name="welecome_huanying_choseyuyan2">Please choose your language</string>
    <string name="welecome_huanying_choseyuyan3">あなたの言語を選んでください</string>
    <string name="welecome_huanying_autochose">Auto | 自动选择 | 自動選択</string>
    <string name="welecome_huanying_chineseyuyan">Chinese | 中文 | 中国語.</string>
    <string name="welecome_huanying_yingyuyuyan">English | 英语 | 英語.</string>
    <string name="welecome_huanying_riyuyuyan">Japanese | 日语 | 日本語</string>
    <string name="welecome_huanying_needreboot">After setting up, you need to restart APP. 设置后需要重启APP 設置後はアプリを再起動する必要があります</string>
    <string name="welecome_huanying_quedingandreboot">Confirm and restart---确定并重启---再起動を確定する.</string>
    <string name="dialog_uninstall_app_name">APP NAME</string>
    <string name="dialog_uninstall_openapp">※ 点击此处打开APP详情 ※</string>
    <string name="dialog_uninstall_open_app">打开APP</string>
    <string name="inback_title">TextView</string>
    <string name="inback_button">Button</string>
    <string name="setting_textsize_time_hour">时间大小（小时）</string>
    <string name="setting_textsize_time_min">时间大小（分钟）</string>
    <string name="setting_textsize_time_name">昵称大小</string>
    <string name="setting_textsize_time_date">日期大小</string>
    <string name="setting_textsize_time_dianliang">电量大小</string>
    <string name="setting_textsize_time_resert">重置</string>
    <string name="setting_imagesetting_name_qinglv">情侣</string>
    <string name="setting_imagesetting_name_meizi">妹子</string>
    <string name="setting_imagesetting_name_luoli">萝莉</string>
    <string name="setting_imagesetting_name_zihyu">知遇</string>
    <string name="setting_imagesetting_name_applist">应用列表</string>
    <string name="setting_imagesetting_name_nowsystemback">显示当前设置的系统壁纸</string>
    <string name="setting_imagesetting_name_nowsystemback_and_applist">显示系统壁纸和应用列表</string>
    <string name="setting_imagesetting_name_newlauncher">新桌面（正在做了--10%）</string>
    <string name="setting_imagesetting_name_clickthis_settingback">点此设置系统壁纸</string>
</resources>