<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    android:background="#ffffff"
    android:padding="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:gravity="center|center_vertical|center_horizontal"
            android:text="@string/welecome_huanying1"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:gravity="center|center_vertical|center_horizontal"
            android:text="@string/welecome_huanying2"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:gravity="center|center_vertical|center_horizontal"
            android:text="@string/welecome_huanying3"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/welecome_huanying_choseyuyan1"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welecome_huanying_choseyuyan2"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welecome_huanying_choseyuyan3"
            android:textSize="17sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/ra_welecome_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/welecome_huanying_autochose" />

            <RadioButton
                android:id="@+id/ra_welecome_china"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welecome_huanying_chineseyuyan" />

            <RadioButton
                android:id="@+id/ra_welecome_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welecome_huanying_yingyuyuyan" />


            <RadioButton
                android:id="@+id/ra_welecome_japanese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welecome_huanying_riyuyuyan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical|center_horizontal"
                android:text="@string/welecome_huanying_needreboot" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="警告：有些设备并不支持多语言！有些设备需要重启后才能看到设置效果！" />

            <Button
                android:id="@+id/btn_welecome_resart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welecome_huanying_quedingandreboot" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>