<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_in_back"></include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shaper_desk_top_show"
            android:orientation="vertical"
            android:padding="15dp">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <RadioButton
                    android:id="@+id/ra_chose_qinglv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_imagesetting_name_qinglv" />

                <RadioButton
                    android:id="@+id/ra_chose_meizi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_imagesetting_name_meizi" />

                <RadioButton
                    android:id="@+id/ra_chose_luoli"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_imagesetting_name_luoli" />


                <RadioButton
                    android:id="@+id/ra_chose_zhiyu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_imagesetting_name_zihyu" />

                <RadioButton
                    android:id="@+id/ra_chose_applist_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_imagesetting_name_applist" />

                <RadioButton
                    android:id="@+id/ra_wallpaper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_imagesetting_name_nowsystemback" />

                <RadioButton
                    android:id="@+id/ra_wallpaper_and_applist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setting_imagesetting_name_nowsystemback_and_applist" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:clickable="false"
                    android:enabled="false"
                    android:focusable="false"
                    android:text="@string/setting_imagesetting_name_newlauncher" />
            </RadioGroup>

            <Button
                android:id="@+id/btn_set_wallpaperimage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/shaper_zhijiao_lins_show"
                android:text="@string/setting_imagesetting_name_clickthis_settingback" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
