<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".launcher.settings.textsizesetting.TextSizeSetting">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/include"
            layout="@layout/layout_in_back"></include>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/shaper_desk_top_show"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_timetext_hour_size"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/shaper_zhijiao_lins_show"
                android:text="@string/setting_textsize_time_hour"
                app:layout_constraintEnd_toEndOf="@+id/btn_dianchitext_size"
                app:layout_constraintStart_toStartOf="@+id/btn_dianchitext_size"
                app:layout_constraintTop_toBottomOf="@+id/btn_dianchitext_size" />


            <Button
                android:id="@+id/btn_timetext_min_size"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/shaper_zhijiao_lins_show"
                android:text="@string/setting_textsize_time_min"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_nametext_size"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/shaper_zhijiao_lins_show"
                android:text="@string/setting_textsize_time_name"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_datetext_size"
                app:layout_constraintStart_toStartOf="@+id/btn_datetext_size"
                app:layout_constraintTop_toBottomOf="@+id/btn_datetext_size" />

            <Button
                android:id="@+id/btn_datetext_size"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/shaper_zhijiao_lins_show"
                android:text="@string/setting_textsize_time_date"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_timetext_hour_size"
                app:layout_constraintStart_toStartOf="@+id/btn_timetext_hour_size"
                app:layout_constraintTop_toBottomOf="@+id/btn_timetext_hour_size" />

            <Button
                android:id="@+id/btn_dianchitext_size"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/shaper_zhijiao_lins_show"
                android:text="@string/setting_textsize_time_dianliang"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_timetext_min_size"
                app:layout_constraintStart_toStartOf="@+id/btn_timetext_min_size"
                app:layout_constraintTop_toBottomOf="@+id/btn_timetext_min_size" />

            <Button
                android:id="@+id/btn_textsize_resert"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/shaper_zhijiao_lins_show"
                android:text="@string/setting_textsize_time_resert"
                android:textSize="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>